app/frontend/assets/styles/components/_modal.scss
@mixin bodyModal {
    overflow: hidden;
    padding-right: 0;
}

@mixin modalVisible {
    opacity: 1;
    visibility: visible;
    backdrop-filter: blur(10px);

    &.modal-right {
        .modal-content {
            right: 0;
        }
    }

    .modal-backdrop {
        display: block;
        opacity: 0.5;
    }
}

body.show-modal {
    @include bodyModal();

    .modal-backdrop {
        display: block;
        opacity: 0.5;
    }

    .modal.show {
        @include modalVisible();
    }
}

body.show-modal--first-filter {
    .modal--first-filter {
        @include modalVisible();
    }
}

.modal {
    position: fixed;
    width: 100%;
    height: 100%;
    opacity: 0;
    visibility: hidden;
    transition: all 1.3s ease;
    top: 0;
    left: 0;
    overflow-x: hidden;
    overflow-y: auto;
    z-index: 2100;

    .turboframe-container {
        display: flex;
        align-items: center;
        min-height: 100%;
    }

    &-dialog {
        display: flex;
        align-items: center;
        min-height: calc(100% - 3rem);
        position: relative;
        width: 90%;
        max-width: map-get($container-max-widths, lg);
        margin: 1.5rem auto;

        &--small {
            max-width: map-get($container-max-widths, md);
        }
    }

    &-content {
        background: $white;
        position: relative;
        display: flex;
        flex-direction: column;
        width: 100%;
        min-height: 100%;
        z-index: 20;
    }

    &-header {
        position: relative;
        padding-left: $container-padding-x;
        padding-bottom: 4px;

        h1 {
            padding: 25px 48px 0 0;
            margin: 0 0 1rem;
            font-size: calc(1.25rem + 1.5vw);

            small {
                display: block;
                font-weight: 400;
                font-size: $font-size-base;
                margin-top: 0.5rem;
            }
        }

        .btn-close {
            &:focus {
                outline-width: thin !important;
            }
        }
    }

    &-body {
        padding: 0 $container-padding-x $container-padding-x;
    }

    &-footer {
        display: flex;
        flex-wrap: wrap;
        flex-shrink: 0;
        align-items: center;
        justify-content: flex-end;
        padding: $modal-inner-padding;
    }

    &-backdrop {
        position: fixed;
        top: 0;
        left: 0;
        z-index: 10;
        width: 100vw;
        height: 100vh;
        background-color: $black;
        opacity: 0;
        display: none;
    }
}

